syntax = "proto3";

option go_package = ".;main";

message Outer_Message {
  repeated Message_1 message_1 = 1;
}

message Message_1 {
  int32 some_int32 = 1;
  fixed32 some_fixed32 = 2;
  fixed64 some_fixed64 = 3;
  string query = 4;
}
